workshop03/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: workshop03-ns
  labels:
    name: workshop03-ns
