workshop03/bggapp-v1.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bggappv1-deploy
  labels:
    name: bggappv1-deploy
spec: 
  selector: 
    matchLabels:
      name: bggappv1-pod
      version: v1
  template:
    metadata:
      name: bggappv1-pod
      labels:
        name: bggappv1-pod
        version: v1
    spec:          
      containers: 
      - name: bggappv1-container
        image: stackupiss/bgg-backend:v1
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
        args:
          - --prefix
          - /v1
        ports:
        - name: bggappv1-port
          containerPort: 3000
        readinessProbe:
          httpGet:
            path: /v1/healthz
            port: 3000
          periodSeconds: 30
        livenessProbe:
          httpGet:
            path: /v1/healthz
            port: 3000
          failureThreshold: 3
          periodSeconds: 30

---
apiVersion: v1
kind: Service
metadata:
  name: bggappv1-svc
  labels:
    name: bggappv1-svc
spec: 
  type: ClusterIP
  selector: 
    name: bggappv1-pod
    version: v1
  ports:
  - port: 3000
    targetPort: bggappv1-port
