workshop03/bggapp-v2.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bggappv2-deploy
  labels:
    name: bggappv2-deploy
spec: 
  selector: 
    matchLabels:
      name: bggappv2-pod
      version: v2
  template:
    metadata:
      name: bggappv2-pod
      labels:
        name: bggappv2-pod
        version: v2
    spec:          
      containers: 
      - name: bggappv2-container
        image: stackupiss/bgg-backend:v2
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
        args:
          - --prefix
          - /v2
        ports:
        - name: bggappv2-port
          containerPort: 3000
        readinessProbe:
          httpGet:
            path: /v2/healthz
            port: 3000
          periodSeconds: 30
        livenessProbe:
          httpGet:
            path: /v2/healthz
            port: 3000
          failureThreshold: 3
          periodSeconds: 30

---
apiVersion: v1
kind: Service
metadata:
  name: bggappv2-svc
  labels:
    name: bggappv2-svc
spec: 
  type: ClusterIP
  selector: 
    name: bggappv2-pod
    version: v2
  ports:
  - port: 3000
    targetPort: bggappv2-port
