workshop03/bggdb.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bggdb-deploy
  labels:
    name: bggdb-deploy
spec: 
  replicas: 1
  selector: 
    matchLabels:
      name: bggdb-pod
      version: v1
  template:
    metadata:
      name: bggdb-pod
      labels:
        name: bggdb-pod
        version: v1
    spec:     
      volumes:
      - name: data-volume
        persistentVolumeClaim:
          claimName: bggdb-pvc
      containers: 
      - name: bggdb-container
        image: stackupiss/bgg-database:v1
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: data-volume
        ports:
        - name: bggdb-port
          containerPort: 3306

---
apiVersion: v1
kind: Service
metadata:
  name: bggdb-svc
  labels:
    name: bggdb-svc
spec: 
  type: ClusterIP
  selector: 
    name: bggdb-pod
    version: v1
  ports:
  - port: 3306
    targetPort: bggdb-port
