workshop03/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    name: bgg-ing
  name: bgg-ing
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: default-backend-svc
      port:
        number: 3000
  rules:
  - host: bgg-188.166.207.66.nip.io
    http:
      paths:
      - path: /v1
        pathType: Prefix
        backend:
          service:
            name: bggappv1-svc
            port: 
              number: 3000
      - path: /v2
        pathType: Prefix
        backend:
          service:
            name: bggappv2-svc
            port: 
              number: 3000
